<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:background="@color/crimson">
    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="fill_parent"
        android:orientation="vertical"
        android:layout_weight="1">
        <TextView
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:text="@string/title"
            android:textAppearance="@style/StyleNico.textcolorligth"
            android:layout_weight="1"/>
    </LinearLayout>
    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="fill_parent"
        android:orientation="horizontal"
        android:layout_weight="1">
        <EditText
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:gravity="center_horizontal"
            android:layout_gravity="center_vertical"
            android:digits="@string/inValues"
            android:background="@color/ripple_material_dark"
            android:hint="@string/Op1"
            android:textSize="25dp"
            android:textColor="@color/white"
            android:id="@+id/eOp1"/>
        <EditText
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:gravity="center_horizontal"
            android:layout_gravity="center_vertical"
            android:digits="@string/inValues"
            android:background="@color/ripple_material_dark"
            android:hint="@string/Op2"
            android:textSize="25dp"
            android:textColor="@color/white"
            android:id="@+id/eOp2"/>
    </LinearLayout>
    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="fill_parent"
        android:orientation="vertical"
        android:layout_weight="1">
        <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="fill_parent"
            android:layout_weight="1">
            <RadioGroup
                android:layout_width="fill_parent"
                android:layout_height="fill_parent"
                android:orientation="horizontal">
                <RadioButton
                    android:layout_width="fill_parent"
                    android:layout_height="fill_parent"
                    android:layout_weight="1"
                    android:text="@string/Sum"
                    android:textAppearance="@style/StyleNico_Small_White_portrait"
                    android:checked="true"
                    android:onClick="selectOp"
                    android:id="@+id/rbSum"/>
                <RadioButton
                    android:layout_width="fill_parent"
                    android:layout_height="fill_parent"
                    android:layout_weight="1"
                    android:text="@string/Res"
                    android:textAppearance="@style/StyleNico_Small_White_portrait"
                    android:onClick="selectOp"
                    android:id="@+id/rbRes"/>
                <RadioButton
                    android:layout_width="fill_parent"
                    android:layout_height="fill_parent"
                    android:layout_weight="1"
                    android:text="@string/Prod"
                    android:textAppearance="@style/StyleNico_Small_White_portrait"
                    android:onClick="selectOp"
                    android:id="@+id/rbMul"/>
                <RadioButton
                    android:layout_width="fill_parent"
                    android:layout_height="fill_parent"
                    android:layout_weight="1"
                    android:text="@string/Div"
                    android:textAppearance="@style/StyleNico_Small_White_portrait"
                    android:onClick="selectOp"
                    android:id="@+id/rbDiv"/>

            </RadioGroup>

        </LinearLayout>

    </LinearLayout>
    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="fill_parent"
        android:orientation="vertical"
        android:layout_weight="1"
        android:gravity="center">
        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@color/ripple_material_light"
            android:text="@string/Calu"
            android:textColor="@color/ripple_material_dark"
            android:textSize="30sp"
            android:layout_gravity="center"
            android:onClick="doOperation"
            android:id="@+id/bCalcular"/>

    </LinearLayout>
    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="fill_parent"
        android:orientation="vertical"
        android:layout_weight="1">
        <TextView
            android:layout_width="fill_parent"
            android:layout_height="fill_parent"
            android:gravity="center"
            android:text=""
            android:textAppearance="@style/StyleNico.textcolordark"
            android:id="@+id/tvResult"/>

    </LinearLayout>

</LinearLayout>
